Commit_028: API implementiert - Quote of the Day - läuft. Muss aber noch bissle am Design und Performance werkeln. (Default Text am Anfang wegbekommen)

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -19,6 +19,9 @@
         <action
             android:id="@+id/action_veryHomeFragment_to_readingsHomeFragment"
             app:destination="@id/readingsHomeFragment" />
+        <action
+            android:id="@+id/action_veryHomeFragment_to_quoteFragment"
+            app:destination="@id/quoteFragment" />
     </fragment>
 
 
@@ -166,8 +169,11 @@
             app:destination="@id/oneCardFragment" />
     </fragment>
 
-
-
+    <fragment
+        android:id="@+id/quoteFragment"
+        android:name="com.example.tarotappdb_01.quotes.uiModel.quoteOfDayFragment.QuoteFragment"
+        android:label="fragment_quote"
+        tools:layout="@layout/fragment_quote" />
 
 
 </navigation>
