Commit 30: Nochmal optimiert und aufgeräumt. Laufende Version bevor es an neues Bonus-Projekt geht: Die besten "Quote of the Day" in einer Favoritenliste verwalten.

--- a/app/src/main/res/layout/fragment_quote.xml
+++ b/app/src/main/res/layout/fragment_quote.xml
@@ -32,7 +32,7 @@
                 android:layout_marginEnd="16dp"
                 android:paddingStart="16dp"
                 android:paddingEnd="16dp"
-                android:text="Quote Of The Day"
+                android:text="..."
                 android:textSize="24sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -44,7 +44,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
                 android:layout_marginBottom="8dp"
-                android:text="source"
+                android:text="..."
                 android:textSize="20sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
