--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -15,5 +15,12 @@
 
     </style>
 
+
+    <!--  Doesn't work :-(  -->
+    <style name="NoActionBar" parent="Theme.TarotAppDB_01">
+        <item name="android:windowActionBar">false</item>
+        <item name="android:windowNoTitle">true</item>
+    </style>
+
 </resources>
 
