--- a/app/src/main/res/layout/favorite_quote_item.xml
+++ b/app/src/main/res/layout/favorite_quote_item.xml
@@ -16,11 +16,22 @@
         android:layout_height="match_parent">
 
         <TextView
+            android:id="@+id/quoteIDTV"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:paddingStart="16dp"
+            android:paddingEnd="16dp"
+            android:text="1"
+            android:textSize="20sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
             android:id="@+id/quoteOfTheDayTV"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
-            android:layout_marginTop="8dp"
             android:layout_marginEnd="16dp"
             android:paddingStart="16dp"
             android:paddingEnd="16dp"
@@ -28,7 +39,7 @@
             android:textSize="24sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toBottomOf="@+id/quoteIDTV" />
 
         <TextView
             android:id="@+id/sourceTV"
