Commit 40.: Weiteres CardReadings Fragment implementiert: "Love Oracle" - Der Clue: dank derselben Legestruktur kann das Meanings-Fragment von "little cross" wiederbenutzt werden. Der Code im "Love Oracle" Fragment muss nur minimal angepasst werden... jedoch mit viel Geschick!!! (Geplant wäre noch eine individuelle farbgestaltung mit rein programmatischen Mitteln hinzukriegen  [in Kotlin, nicht XML !] )

--- a/app/src/main/res/layout/fragment_little_cross_meaning.xml
+++ b/app/src/main/res/layout/fragment_little_cross_meaning.xml
@@ -97,7 +97,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="8dp"
-                            android:text="This card represents the PAST \nand it's influence for the issue. \nThe root cause for the actual situation."
+                            android:text="This card represents your \nissue, topic or quoestion. \nIt shows what's on your mind. \n."
                             android:textColor="#552AA3"
                             android:textSize="14sp"
                             android:textStyle="bold"
@@ -188,7 +188,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="8dp"
-                            android:text="This card represents the PRESENT. \nThe actual situation / issue. \nWhat it's all about."
+                            android:text="This card tells you what you should \navoid! Don't do that!"
                             android:textColor="#552AA3"
                             android:textSize="14sp"
                             android:textStyle="bold"
@@ -280,7 +280,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="8dp"
-                            android:text="This card represents the FUTURE. \nThe direction it all evolves to. \nThe outcome"
+                            android:text="This card tells you \nwhat you should do. \nIt shows you the direction to go."
                             android:textColor="#552AA3"
                             android:textSize="14sp"
                             android:textStyle="bold"
@@ -349,7 +349,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginStart="8dp"
-                            android:text="3."
+                            android:text="4."
                             android:textAlignment="center"
                             android:textColor="#AA0000"
                             android:textSize="20sp"
@@ -371,7 +371,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="8dp"
-                            android:text="This card represents the FUTURE. \nThe direction it all evolves to. \nThe outcome"
+                            android:text="This card shows a possible outcome, \nif you follow the card 2 and 3. \nThe goal to achieve."
                             android:textColor="#552AA3"
                             android:textSize="14sp"
                             android:textStyle="bold"
