--- a/app/src/main/res/layout/fragment_love_oracle.xml
+++ b/app/src/main/res/layout/fragment_love_oracle.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".cards.cardsUI.cardReadings.littleCross.LittleCrossFragment">
+    tools:context=".cards.cardsUI.cardReadings.loveOracle.LoveOracleFragment">
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -63,7 +63,8 @@
             android:id="@+id/card01TV"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="It's about..."
+            android:text="Relation\nissue"
+            android:gravity="center_horizontal"
             app:layout_constraintEnd_toEndOf="@+id/card01CV"
             app:layout_constraintStart_toStartOf="@+id/card01CV"
             app:layout_constraintTop_toBottomOf="@+id/card01CV" />
@@ -82,7 +83,9 @@
             android:id="@+id/card02TV"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Don't do this!"
+            android:gravity="center_horizontal"
+            android:text="The other \nperson"
+            app:layout_constraintEnd_toEndOf="@+id/card2CV"
             app:layout_constraintStart_toStartOf="@+id/card2CV"
             app:layout_constraintTop_toBottomOf="@+id/card2CV" />
 
@@ -90,7 +93,8 @@
             android:id="@+id/card02nrTV"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="2"
+            android:text="3"
+            android:textStyle="bold"
             app:layout_constraintBottom_toTopOf="@+id/card2CV"
             app:layout_constraintEnd_toEndOf="@+id/card2CV"
             app:layout_constraintStart_toStartOf="@+id/card2CV" />
@@ -99,7 +103,7 @@
             android:id="@+id/card03TV"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Do this!"
+            android:text="Your emotions"
             app:layout_constraintEnd_toEndOf="@+id/card03CV"
             app:layout_constraintStart_toStartOf="@+id/card03CV"
             app:layout_constraintTop_toBottomOf="@+id/card03CV" />
@@ -108,7 +112,7 @@
             android:id="@+id/card03nrTV"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="3"
+            android:text="2"
             android:textStyle="bold"
             app:layout_constraintBottom_toTopOf="@+id/card03CV"
             app:layout_constraintEnd_toEndOf="@+id/card03CV"
@@ -118,7 +122,7 @@
             android:id="@+id/card04TV"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Future \nSurprise"
+            android:text="What to do"
             app:layout_constraintEnd_toEndOf="@+id/card04CV"
             app:layout_constraintStart_toStartOf="@+id/card04CV"
             app:layout_constraintTop_toBottomOf="@+id/card04CV" />
@@ -263,3 +267,10 @@
 
 
 </FrameLayout>
+
+
+
+<!--
+    tools:context=".cards.cardsUI.cardReadings.loveOracle.LoveOracleFragment">
+
+-->
